# lfr-cli

./: .dockerignore  .gitignore  .golangci.yml  .goreleaser.yml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  go.mod  go.sum  main.go  pkged.go  release-please-config.json
.github/workflows/: auto-update-assets.yml  gh-pages.yml  lint.yml  pre-release.yml  release-please.yml  release.yml  test.yml
cmd/: create.go  create_workspace.go  deba.go
cmd/lfr/: main.go
docs/: Dockerfile  Gemfile  _config.yml  configuration.md  docker-compose.yml  getting_started.md  index.markdown  index.md
docs/_includes/: nav_footer_custom.html
docs/commands/: build.md  commands.md  config.md  deploy.md  diagnose.md  exec.md  init.md  logs.md  shell.md  start.md  stop.md  trial.md
internal/assets/tpl/client_extension/liferay-client-extensions-extra-samples/sample-etc-python-fastapi/: .dockerignore  Dockerfile  LCP.json  client-extension.yaml  main.py  pyproject.toml
internal/assets/tpl/client_extension/liferay-client-extensions-extra-samples/sample-etc-python-fastapi/dxp-metadata/: liferay.oauth.application.external.reference.codes
internal/cmd/: root.go
internal/conf/: conf.go  conf_test.go
internal/config/: config.go
internal/prompt/: prompt.go
lfr/: main.go
pkg/assets/: assets.go
pkg/cmd/: deba.go
pkg/metadata/: metadata.go  metadata_test.go
pkg/project/: metadata.go  metadata_test.go
pkg/scaffold/: api.go  api_test.go  client_extension.go  client_extension_test.go  doc.go  docker.go  docker_test.go  spring.go  (+15 more)
util/: bundle.go  files.go  print.go
(+695 files in other folders)
